--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.7.2",
+    "axios": "^1.6.7",
     "flowbite": "^2.2.1",
     "flowbite-vue": "^0.1.2"
   }
