--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.2",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
     "flowbite": "^2.2.1",
