--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@lukemorales/query-key-factory": "^1.3.2",
+    "@tanstack/vue-query": "^5.17.19",
     "@vueuse/core": "^10.7.2",
+    "@zodios/core": "^10.9.6",
     "axios": "^1.6.7",
     "flowbite": "^2.2.1",
-    "flowbite-vue": "^0.1.2"
+    "flowbite-vue": "^0.1.2",
+    "zod": "^3.22.4"
   }
 }
